Centered checkboxes for in-use indication; resized columns to correct IP address hiding on small layouts

--- a/src/static/main.css
+++ b/src/static/main.css
@@ -162,6 +162,10 @@ p { margin-bottom: 1em; }
     text-overflow: ellipsis;
 }
 
+.tableWidget table td.centered {
+    text-align: center;
+}
+
 ol.form {
     list-style-type: none;
 }
